# localmind

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  models.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
compose/: compose.gpu.apple.yml  compose.gpu.nvidia.yml
data/: README.md
docs/: agentic-architecture.md  agentic.md  architecture.md  auth.md  backup.md  code-signing.md  demo.md  gpu.md  headscale.md  install.md  mcp.md  mobile.md  phone-from-anywhere.md  profiler.md  releasing.md  remote-access.md  sqlite-vec-design.md  telemetry.md  threat-model.md  troubleshooting.md  walkthrough.md
mcp/: Dockerfile  go.mod  go.sum
mcp/cmd/localmind-mcp/: main.go
mcp/internal/embed/: embed.go
mcp/internal/index/: extract.go  extract_test.go  index.go  index_test.go
mcp/internal/store/: sqlitevec.go  store.go  (+1 more)
ocrmypdf/: Dockerfile  server.py
orchestrator/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
orchestrator/localmind_orchestrator/: __init__.py  chat.py  classifier.py  ollama.py  orchestrator.py  server.py  skills.py  state.py  tools.py  worker.py
orchestrator/localmind_orchestrator/tests/: test_chat.py  test_classifier.py  test_orchestrator.py  test_skills.py  test_tools.py
orchestrator/skills/: coder.md  orchestrator.md  researcher.md  reviewer.md  synthesizer.md
scripts/: demo.sh  smoke.sh
wizard/: go.mod  go.sum
(+30 files in other folders)
