[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localmind-orchestrator"
version = "0.3.0"
description = "Agentic orchestrator sidecar for localmind: classify, plan, spawn workers, group-chat UX."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "localmind contributors" }]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "python-frontmatter>=1.1.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx[testing]>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["localmind_orchestrator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["localmind_orchestrator/tests"]
